# deduct

./: Cargo.toml  README.md  deduct-772916d8d2d89aed.js  index.html  manifest.json  sw.js
.github/workflows/: pages.yml  publish.yml  rust.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: checker.rs  citation_parser.rs  sentence_parser.rs
fuzz/in/: big  small
fuzz/src/: main.rs
src/: lib.rs  main.rs
src/check/: mod.rs  rules.rs  rulesets.rs
src/parse/: citation.rs  mod.rs  sentence.rs
src/ui/: mod.rs  popups.rs  proof.rs
src/ui/static/rules/: Makefile
src/ui/static/rules/texf/: K.texf  R4.texf  R5.texf  RT.texf  TFL.texf  TFLD.texf
