[package]
name        = "deduct"
authors     = ["Colonial"]
version     = "0.1.0"
edition     = "2021"
description = "A Fitch-style natural deduction proof checker, with support for modal logic."
repository  = "https://github.com/Colonial-Dev/deduct"
readme      = "README.md"
license     = "AGPL-3.0"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
# GUI
egui = "0.27.0"
eframe = { version = "0.27.0", features = ["persistence"] }

# Logging and Errors
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.58"

# Parsing
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
