[package]
name        = "deduct"
authors     = ["Colonial"]
version     = "1.0.0"
edition     = "2021"
description = "A Fitch-style natural deduction proof checker, with support for modal logic."
repository  = "https://github.com/Colonial-Dev/deduct"
readme      = "README.md"
license     = "AGPL-3.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 2

[dependencies]
# GUI
egui = "0.27.2"
eframe = { version = "0.27.2", features = [
    "wgpu",          # Use the WGPU rendering backend.
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Errors
thiserror = "1.0.58"

# Parsing
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
egui_extras = { version = "0.27.2", features = ["all_loaders"] }

# Addl. WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
