[package]
name = "deduct-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.deduct]
path = ".."

[[bin]]
name = "sentence_parser"
path = "fuzz_targets/sentence_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "citation_parser"
path = "fuzz_targets/citation_parser.rs"
test = false
doc = false
bench = false
